--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project specific
+configs/
+tempconfig/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +107,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Pycharm
+.idea/
